--- a/front/index.html
+++ b/front/index.html
@@ -51,7 +51,7 @@
     <main class="content">
         <section class="section__info">
             <p class="article__text">
-                Тут краткое описание: что загружать и зачем
+                Для проведения автоматического анализа полисомнограммы загрузите файл в формате .zip и нажмите на кнопку "Запустить", чтобы начать анализ
               </p>
         </section>
         <section class="section__form">
@@ -60,7 +60,7 @@
                     <label for="file_inpute" class="label">Пожалуйста,</label>
                     <input class="input" type="file" id="file_inpute" name="file_inpute" accept="image/png, image/jpeg">   
                 </div>
-                <button class="button">Загрузить</button>
+                <button type="submit" class="button">Запустить</button>
             </form> 
         </section>
       
