--- a/front/index.html
+++ b/front/index.html
@@ -55,7 +55,7 @@
               </p>
         </section>
         <section class="section__form">
-            <form class="form">
+            <form class="form" method="post" action="/upload">
                 <div class="input__place">
                     <label for="file_inpute" class="label">Пожалуйста,</label>
                     <input class="input" type="file" id="file_inpute" name="file_inpute" accept="image/png, image/jpeg">   
