--- a/front/index.html
+++ b/front/index.html
@@ -74,5 +74,6 @@
       </p>
     </footer>
     <script src="./scripts/script.js"></script>
+    <script src="./scripts/api.js"></script>
   </body>
 </html>
