--- a/front/index.html
+++ b/front/index.html
@@ -55,12 +55,12 @@
               </p>
         </section>
         <section class="section__form">
-            <form class="form" method="post" action="/upload" enctype="multipart/form-data">
+            <form class="form" >
                 <div class="input__place">
                     <label for="file_inpute" class="label">Пожалуйста,</label>
                     <input class="input" type="file" id="file_inpute" name="file_inpute" accept="image/png, image/jpeg">   
                 </div>
-                <button type="submit" class="button">Запустить</button>
+                <button class="button">Запустить</button>
             </form> 
         </section>
       
@@ -73,7 +73,7 @@
         2024
       </p>
     </footer>
-    <script src="./scripts/script.js"></script>
-    <script src="./scripts/api.js"></script>
+    <script type="module" src="./scripts/script.js"></script>
+    <!-- <script type="module" src="./scripts/api.js"></script> -->
   </body>
 </html>
