--- a/front/index.html
+++ b/front/index.html
@@ -61,7 +61,7 @@
             </p> 
         </section>
         <section class="section__form">
-            <form class="form" enctype="multipart/form-data">
+            <form class="form" enctype='multipart/form-data'>
                 <div class="input__place">
                     <label for="file_inpute" class="label">Пожалуйста,</label>
                     <input class="input" type="file" id="file_inpute" name="file_inpute" accept=".zip,.rar,.7zip" >   
